# aive

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: basic_usage.py  simple_video_creation.py  simple_video_rendering.py
src/: app.py
src/adapters/: moviepy_renderer.py  otio_formatter.py
src/aive/: __init__.py
src/aive/adapters/: __init__.py  groq_whisper_transcriber.py  moviepy_renderer.py
src/aive/core/: __init__.py  clips.py  timeline.py  track.py  transitions.py
src/aive/ports/: __init__.py  renderer.py  timeline_format.py
src/aive/templates/: __init__.py  placeholder.py
src/core/: clips.py  timeline.py  track.py  transitions.py
src/pipeline/: __init__.py  render_queue.py
src/ports/: transcription_service.py
tests/: __init__.py  test_core.py
