[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aive"
version = "0.1.0"
description = "A modern Python library for automated video creation and editing"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Andrii Popesku", email = "uandworker@gmail.com"}
]
keywords = ["video", "editing", "automation", "timeline", "multimedia"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video :: Non-Linear Editor",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "typing-extensions>=4.0.0",
    "dataclasses; python_version<'3.7'",
]

[project.optional-dependencies]
moviepy = ["moviepy>=1.0.0"]
otio = ["opentimelineio>=0.15.0"]
whisper = ["groq>=0.4.0", "requests>=2.25.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=1.0.0",
    "pre-commit>=2.20.0",
]
all = ["aive[moviepy,otio,whisper]"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov=aive --cov-report=term-missing"
